src/objects/PBS_Training_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Add_training_parameters_to_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will pass context parameters to the Resource URL. (e.g. https://someurl.com/?aid=ASSIGNMENT_ID&amp;tid=TPLAN_ID)</inlineHelpText>
        <label>Add training parameters to URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_in_Iframe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will load the Resource URL within an iframe instead of a new window</inlineHelpText>
        <label>Display in Iframe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>PBS_Learning__c</referenceTo>
        <relationshipName>Training_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Prevent_completion_on_launch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Learnings of type &quot;Resource&quot; are marked as completed on launch by default, enable this option if you want to delegate the completion to the Resource URL</inlineHelpText>
        <label>Delegate assignment completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_URL__c</fullName>
        <inlineHelpText>URL of the learning resource you would like to use for this learning (e.g. https://someurl.com)</inlineHelpText>
        <label>Resource URL</label>
        <type>Url</type>
    </fields>
    <label>PBS_Training Resource</label>
    <nameField>
        <label>Training Resource Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS_Training Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>